@@ -8,7 +8,7 @@
 	<string id="32009">Datenbank scannen, wenn fertig</string>
 	<string id="32010">Datenbank bereinigen, wenn fertig</string>
 	<string id="32011">Medien Speicherort immer bereinigen (löscht alle Dateien im Ordner)</string>
-	<string id="32012">Unterstützung für Exodus: Wenn du diese Funktion aktivierst, erlaubst du, dass OSMOSIS Programmcode von Exodus ändern darf</string>
+	<!-- 32012 -->
 	<string id="32013">Keine Streams hinzufügen, die in "[OV]" vorhanden sind (z. B. AMAZON VOD)</string>
 	<string id="32014">Kodi verwendet eine MYSQL-Datenbank</string>
 	
