@@ -2,6 +2,7 @@
   gu3nter  Added MYSQL support for Music
   Gismo112 Add SkinUpdate Resume / Watchedstates
   gu3nter  Sqlite3 and MYSQL are now supported in one Branch
+  Maven85  Set content of listitems; remove setting of support for exodus/xstream 
 
 1.2.9-1.3.0
   Gismo112 Fix watchedstate for not resumed video
